Added some Javadoc